# module/router/v1/product/product_router.go
@@ -9,6 +9,7 @@ import (
 func ProductRoute(v1 *gin.RouterGroup, hdlSoc hdlproduct.ProductHandler) {
 	s := v1.Group("/product")
 	s.Use(middleware.JWTMiddleware())
+	s.GET("/getall", hdlSoc.GetAll)
 	s.GET("/getone/:id", middleware.AuthorizationById(), hdlSoc.GetById)
 	s.POST("/createproduct", hdlSoc.Create)
 	s.PUT("/updateproduct/:id", middleware.AuthorizationByRole(), hdlSoc.Update)
